--- a/src/app/styles/boardCard.css
+++ b/src/app/styles/boardCard.css
@@ -1,31 +1,6 @@
-
-.card-body.shpe {
-    display: flex;
-    color: white;
-    flex-direction: column;
-    text-align: center;
-    gap: 8px;
-    padding: 16px;
-    background-image: linear-gradient(315deg, #002cca, #6a79b1) ;
-    border: 3px solid #db6c0b;
-    border-radius: 8px;
-}
-
-.card-body.shpetinas {
-    display: flex;
-    color: white;
-    flex-direction: column;
-    text-align: center;
-    gap: 8px;
-    padding: 16px;
-    background-image: linear-gradient(315deg, #d700cc, #b475ab);
-    border: 3px solid #db6c0b;
-    border-radius: 8px;
-}
-
-hr {
+/* hr {
     height: 1px;
-}
+} */
 
 .links {
     display: flex;
