--- a/src/app/styles/page.module.css
+++ b/src/app/styles/page.module.css
@@ -28,13 +28,13 @@
   }
 }
 
-.main {
+/* .main {
   display: flex;
   flex-direction: column;
   gap: 32px;
   grid-row-start: 2;
   padding-left: 15%;
-}
+} */
 
 .main ol {
   font-family: var(--font-geist-mono);
